--- a/customer-app/angular.json
+++ b/customer-app/angular.json
@@ -26,9 +26,9 @@
         "src/styles.css",
         "node_modules/bootstrap/dist/css/bootstrap.min.css",
         "node_modules/font-awesome/css/font-awesome.min.css",
-        "node_modules/admin-lte/dist/css/AdminLTE.css",
-         "node_modules/icheck/skins/square/blue.css",
         "node_modules/ionicons/dist/css/ionicons.css",
+        "node_modules/admin-lte/dist/css/AdminLTE.css",
+        "node_modules/icheck/skins/square/blue.css",
         "src/_variables.less",
         "node_modules/morris.js/morris.css",
         "node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css",
@@ -48,10 +48,10 @@
         "node_modules/bootstrap-datepicker/js/bootstrap-datepicker.js",
         "node_modules/jquery-slimscroll/jquery.slimscroll.js",
         "node_modules/bootstrap3-wysihtml5-bower/dist/bootstrap3-wysihtml5.all.js",
-        "node_modules/icheck/icheck.js",
         "node_modules/admin-lte/dist/js/adminlte.js",
         "src/assets/js/adminLTEOptions.js",
-        "src/assets/js/scripts.js"
+        "src/assets/js/scripts.js",
+        "node_modules/icheck/icheck.js"
       ],
             "es5BrowserSupport": true
           },
